# web-admin

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example
backend/: Cargo.toml
backend/docs/apis/: auth.md  common.md  departments.md  permissions.md  roles.md  user-departments.md  users.md
backend/docs/tests/: test_auth.md  test_organization.md  test_pagination.md  test_remove_permission.md
backend/migrations/: 001_initial_schema.sql  002_initial_data.sql  003_organization_schema.sql  004_organization_initial_data.sql  005_add_department_manager.sql
backend/src/: auth.rs  database.rs  extractors.rs  main.rs  middleware.rs  rbac.rs  utils.rs
backend/src/models/: common.rs  department.rs  mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_department.rs  user_role.rs
backend/src/routes/: auth.rs  department.rs  mod.rs  permission.rs  role.rs  user.rs  user_department.rs  utils.rs
backend/src/services/: department_service.rs  mod.rs  user_department_service.rs  user_service.rs
docs/deployment/: quick-start.md
frontend/: angular.json  package.json
frontend/src/: index.html
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts  icons-provider.ts
frontend/src/app/config/: api.config.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/services/: auth.service.ts  department.service.ts  permission.service.ts  (+3 more)
scripts/: README.md  db-manager.sh  dev-start.sh  prod-deploy.sh
(+42 files in other folders)
